# match_lib_package

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
src/match_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: test_matchlib.py
tests/: test_matchlib.py
