<?xml version="1.0"?>
<package format="2">
  <name>match_lib_package</name>
  <version>0.1.0</version>
  <description>Python library for match robots and other things, integrated with ROS.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>python3-setuptools</build_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-setuptools</exec_depend> -->
  
  <!-- Add dependencies here if needed -->
  <!-- <exec_depend>numpy</exec_depend> -->

  <export>
    <!-- <build_type>catkin</build_type> -->
  </export>
</package>
