[metadata]
name = match_lib
description = Python Library for match robots and other things
author = Hauke Heeren
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
# packages =
#     match_lib
install_requires =
    numpy>1
    importlib-metadata; python_version<"3.8"
package_dir =
    =src

[options.extras_require]
testing =
    pytest >= 3.7

[options.package_data]
match_lib =
    py.typed

[flake8]
max-line-length = 160
